--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-java8</artifactId>
-            <version>6.0.0.Alpha7</version>
+            <version>5.6.15.Final</version>
         </dependency>
     </dependencies>
 </project>
